--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,31 @@ a {
   background-color: #58e1c1;
 }
 
+.img-avatar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img-frame {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 100%;
+  padding: 13px;
+  border: 1px solid #ccc;
+}
+
+.img-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media (min-width: 768px) {
   .container {
     max-width: 1400px;
@@ -280,37 +305,12 @@ a {
     margin-right: initial;
   }
 }
-.img-avatar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  max-width: 100%;
-  max-height: 100%;
-}
-
-.img-frame {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  max-width: 100%;
-  padding: 13px;
-  border: 1px solid #ccc;
-}
-
-.img-logo {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .input {
   border-bottom: 5px solid #58e1c0;
 }
 
 .theme.col-4 {
-  background-color: #000;
+  background-color: #7ee6fd;
 }
 
 .theme.col-5 {
@@ -318,7 +318,7 @@ a {
 }
 
 .theme.col-6 {
-  background-color: #e1e1f1;
+  background-color: #4da2bb;
 }
 
 .theme.col-7 {
