--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -76,7 +76,7 @@ a {
 
 .theme.col-2 {
   background-color: #fd7856;
-
+}
 
 .theme.col-3 {
   background-color: #deb2ee;
@@ -140,8 +140,8 @@ a {
   padding: 10px 0;
   display: block;
   width: 100%;
-  transition:
-    background-color .2s ease-in-out,
+  transition: 
+    background-color .2s ease-in-out, 
     color .2s ease-in-out;
 }
 
@@ -222,7 +222,7 @@ a {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-  max-width: 100%;
+  max-width: 100%; 
   max-height: 100%;
 }
 
