--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,9 +4,9 @@
 // $color4: #4da2bb;
 // $color5: #ec9fa3;
 $color1: #58e1c0;
-$color2: #000;
+$color2: #7ee6fd;
 $color3: #fff;
-$color4: #e1e1f1;
+$color4: #4da2bb;
 $color5: #22ff31;
 
 $breakpoint1: 768px;
