--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,30 @@ a {
   background-color: #fd7856;
 }
 
+.input {
+  border-bottom: 5px solid #58e1c0;
+}
+
+.theme.col-4 {
+  background-color: #7ee6fd;
+}
+
+.theme.col-5 {
+  background-color: #fff;
+}
+
+.theme.col-6 {
+  background-color: #4da2bb;
+}
+
+.theme.col-7 {
+  background-color: #22ff31;
+}
+
+.theme.col-8 {
+  background-color: #11ee26;
+}
+
 .form {
   flex-basis: 100%;
 }
@@ -77,7 +101,7 @@ a {
   margin: 10px auto 0;
   border: none;
   padding: 10px;
-  border-bottom: 5px solid #58e1c1;
+  border-bottom: 5px solid #58e1c0;
 }
 
 .hidden {
@@ -87,6 +111,30 @@ a {
   width: 1px;
   height: 1px;
   overflow: hidden;
+}
+
+.input {
+  border-bottom: 5px solid #58e1c0;
+}
+
+.theme.col-4 {
+  background-color: #7ee6fd;
+}
+
+.theme.col-5 {
+  background-color: #fff;
+}
+
+.theme.col-6 {
+  background-color: #4da2bb;
+}
+
+.theme.col-7 {
+  background-color: #22ff31;
+}
+
+.theme.col-8 {
+  background-color: #11ee26;
 }
 
 .container {
@@ -124,7 +172,7 @@ a {
 }
 
 .theme.col-5 {
-  background-color: #88d9a0;
+  background-color: #fff;
 }
 
 .theme.col-6 {
@@ -132,11 +180,11 @@ a {
 }
 
 .theme.col-7 {
-  background-color: #ec9fa3;
+  background-color: #22ff31;
 }
 
 .theme.col-8 {
-  background-color: #fd9f85;
+  background-color: #11ee26;
 }
 
 .theme.col-9 {
@@ -159,6 +207,30 @@ a {
   flex-basis: 100%;
 }
 
+.input {
+  border-bottom: 5px solid #58e1c0;
+}
+
+.theme.col-4 {
+  background-color: #7ee6fd;
+}
+
+.theme.col-5 {
+  background-color: #fff;
+}
+
+.theme.col-6 {
+  background-color: #4da2bb;
+}
+
+.theme.col-7 {
+  background-color: #22ff31;
+}
+
+.theme.col-8 {
+  background-color: #11ee26;
+}
+
 .nav {
   padding-left: 0;
   flex-basis: 100%;
@@ -177,7 +249,7 @@ a {
 
 .nav-link:hover {
   color: #fff;
-  background-color: #58e1c1;
+  background-color: #58e1c0;
 }
 
 .img-avatar {
@@ -203,6 +275,30 @@ a {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.input {
+  border-bottom: 5px solid #58e1c0;
+}
+
+.theme.col-4 {
+  background-color: #7ee6fd;
+}
+
+.theme.col-5 {
+  background-color: #fff;
+}
+
+.theme.col-6 {
+  background-color: #4da2bb;
+}
+
+.theme.col-7 {
+  background-color: #22ff31;
+}
+
+.theme.col-8 {
+  background-color: #11ee26;
 }
 
 @media (min-width: 768px) {
@@ -323,6 +419,10 @@ a {
 
 .theme.col-7 {
   background-color: #22ff31;
+}
+
+.theme.col-8 {
+  background-color: #11ee26;
 }
 
 /*# sourceMappingURL=styles.css.map */
