--- a/scss/component/_form.scss
+++ b/scss/component/_form.scss
@@ -1,16 +1,18 @@
+@import '../utilities/variables';
+
 .form {
     flex-basis: 100%;
   }
-  
+
   .input{
     display: block;
     width: 94%;
     margin: 10px auto 0;
     border: none;
     padding: 10px;
-    border-bottom: 5px solid #58e1c1;
+    border-bottom: 5px solid $color1;
   }
-  
+
   .hidden {
     position:absolute;
     left:-10000px;
@@ -19,4 +21,3 @@
     height:1px;
     overflow:hidden;
   }
-  
