--- a/scss/component/_grid.scss
+++ b/scss/component/_grid.scss
@@ -1,3 +1,7 @@
+@import '../utilities/variables';
+
+
+
 .container {
   padding: 0 10px;
 }
@@ -29,23 +33,23 @@
 }
 
 .theme.col-4 {
-  background-color: #7ee6fd;
+  background-color: $color2;
 }
 
 .theme.col-5 {
-  background-color: #88d9a0;
+  background-color: $color3;
 }
 
 .theme.col-6 {
-  background-color: #4da2bb;
+  background-color: $color4;
 }
 
 .theme.col-7 {
-  background-color: #ec9fa3;
+  background-color: $color5;
 }
 
 .theme.col-8 {
-  background-color: #fd9f85;
+  background-color: $color6;
 }
 
 .theme.col-9 {
