--- a/scss/component/_mediaquery.scss
+++ b/scss/component/_mediaquery.scss
@@ -1,5 +1,6 @@
+@import '../utilities/variables';
 //   Media Query
-@media (min-width: 768px) {
+@media (min-width: $breakpoint1) {
 
     .container {
       max-width: 1400px;
