--- a/scss/component/_navigation.scss
+++ b/scss/component/_navigation.scss
@@ -1,3 +1,6 @@
+@import '../utilities/variables';
+
+
 .nav {
     padding-left: 0;
     flex-basis: 100%;
@@ -18,5 +21,5 @@
 
   .nav-link:hover {
     color: #fff;
-    background-color: #58e1c1;
+    background-color: $color1;
   }
