--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -5,32 +5,32 @@
 // $color5: #ec9fa3;
 $color1: #58e1c0;
 $color2: #7ee6fd;
-$color3: #fff;
+$color3: #88d9a0;
 $color4: #4da2bb;
-$color5: #22ff31;
-$color6: #11ee26;
+$color5: #ec9fa3;
+$color6: #fd9f85;
 
 $breakpoint1: 768px;
 
-.input
-  border-bottom: 5px solid $color1;
-}
-
-.theme.col-4 {
-  background-color: $color2;
-}
-
-.theme.col-5 {
-  background-color: $color3;
-}
-
-.theme.col-6 {
-  background-color: $color4;
-}
-
-.theme.col-7 {
-  background-color: $color5;
-}
-.theme.col-8 {
-  background-color: $color6;
-}
+// .input {
+//   border-bottom: 5px solid $color1;
+// }
+//
+// .theme.col-4 {
+//   background-color: $color2;
+// }
+//
+// .theme.col-5 {
+//   background-color: $color3;
+// }
+//
+// .theme.col-6 {
+//   background-color: $color4;
+// }
+//
+// .theme.col-7 {
+//   background-color: $color5;
+// }
+// .theme.col-8 {
+//   background-color: $color6;
+// }
